Add code sniffing.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
 	"name": "multiple-roles",
 	"scripts": {
-    "build:dist": "shx test -d build && shx rm -r build; shx mkdir -p build/multiple-roles; shx cp -R languages *.php readme.txt controllers views build/multiple-roles"
+    "build:dist": "shx test -d build && shx rm -r build; shx mkdir -p build/multiple-roles; shx cp -R languages *.php readme.txt controllers views build/multiple-roles",
+		"phpcs": "php vendor/bin/phpcs *.php views/ controllers/",
+		"phpcbf": "php vendor/bin/phpcbf *.php views/ controllers/"
   },
-	"devDependencies": {
+	"devdependencies": {
 		"shx": "^0.3.3"
 	}
 }
